profile spacing and padding fixed

--- a/styles.css
+++ b/styles.css
@@ -340,8 +340,9 @@ grid-template-rows: repeat(4,1fr);
   border-radius: 8px;
   display: grid;
  
-  padding-left: clamp(2.2rem,10%,4.5rem);
+  padding-left: clamp(2.4rem,15%,10rem);
 --trending-image:var(--images);
+font-size:1.4rem;
 }
 .all-profiles>:nth-child(1){--images:url("/images/icons/koala.png")}
 .all-profiles>:nth-child(2){--images:url("/images/icons/turtle.png")}
@@ -358,12 +359,15 @@ position: relative;
    width: 2rem;
    height: 2rem;
    position: absolute;
-   left:-1.5rem;
-   top:.8rem;
+left: clamp(-1.5rem,-7%,-2rem);
   
    border-radius: 50%;
 }
 .all-profiles .project-description{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: .6rem;
+    letter-spacing: .1rem;
+}
+.profile-tag{
+    letter-spacing: .2rem;
 }
